[gd_scene load_steps=5 format=2]

[ext_resource path="res://Projects/QTE-Basic/Assets/DefaultFontHeader.tres" type="DynamicFont" id=1]
[ext_resource path="res://Projects/QTE-Basic/QTE.gd" type="Script" id=2]
[ext_resource path="res://Projects/QTE-Basic/Assets/ProgressCircle.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/Prompt:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 1, 1 ), Vector2( 1.5, 1.5 ) ]
}

[node name="QTE" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 200 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "Quick Time Event
-----
DESCRIPTION
Prompts the user to provide a single or series of inputs based on an objective.
-----
SIGNALS
completed()
Emitted when user has succesfully finished the QTE
failed()
Emitted when the user has unsuccessfully finished the QTE
-----
ENUMERATIONS
enum Type:
SINGLE_HIT = 0 --- QTE activates after a single input is pressed
MASH = 1 --- QTE activates after multiple of the same input is pressed
HOLD = 2 --- QTE activiates after input is held down for a certain amount of time
-----
CONSTANTS
QTE_ACTION_NAME = \"qte_select\" --- Name of the custom Input Action created in the Input Map
-----
PROPERTY DESCRIPTION
(String) input_char: Single key input the user is requested to press.
(Type) behavior: Changes how you would like the user to complete and fail the objective.
(Float) time_remaining: Amount of time left before user fails the objective. (Applies differently to the HOLD type, in which it controls how long the user needs to have the inout held down before the objective is complete.)
(Int) base_num_presses: The initial amount of pressed need to complete the QTE. (Applies to the MASH Type only.)
(Texture) texture_progress: Image used to display progress of completion of the QTE. 
(DynamicFont) font: Font used for displaying the prompt.
-----
-----
-----

-----
-----
-----
-----
-----
-----
-----
-----
-----
-----
-----
-----
-----
-----
-----
-----
-----
-----
-----"
}
texture_progress = ExtResource( 3 )
font = ExtResource( 1 )

[node name="Bg" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prompt" type="Label" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 176.0
rect_min_size = Vector2( 0, 176 )
rect_pivot_offset = Vector2( 100, 78 )
size_flags_horizontal = 3
size_flags_vertical = 5
size_flags_stretch_ratio = 9.0
text = "L"
align = 1
valign = 1

[node name="CountdownBar" type="ProgressBar" parent="VBoxContainer"]
margin_top = 180.0
margin_right = 200.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
step = 1.0
value = 100.0
rounded = true
percent_visible = false

[node name="ProgressIndicator" type="TextureProgress" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 75.0
rect_min_size = Vector2( 200, 175 )
size_flags_horizontal = 3
size_flags_vertical = 3
step = 0.01
texture_progress = ExtResource( 3 )
fill_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 1 )
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
